# tasknight

./: .gitignore  .stylish-haskell.yaml  .travis.yml  HLint.hs  README.md  build  build.hs  db-devel-init.sh  run.sh  stack.yaml  tasknight-dashboard.cabal  test.sh
app/: Main.hs
dashboard/: tasknight-dashboard.cabal
dashboard/app/: Main.hs
dashboard/src/Tasknight/: Dashboard.hs  Storage.hs
dashboard/src/Tasknight/Dashboard/: Config.hs
dashboard/src/Tasknight/Providers/: Gmail.hs  Twitter.hs
dashboard/src/Tasknight/Util/: IMAP.hs
docker/: Dockerfile  entry_point
dropbox/: Dropbox.hs  dropbox.cabal
ff/: .gitignore  package.yaml
ff/app/: Main.hs
ff/exe/: Main.hs
frontend/: Application.hs  Foundation.hs  LICENSE  tasknight-frontend.cabal
frontend/Handler/: Home.hs
frontend/app/: Main.hs  devel.hs
frontend/config/: models  routes
frontend/src/Tasknight/: Frontend.hs
frontend/src/Tasknight/Frontend/: Auth.hs  Dashboard.hs  Root.hs  Types.hs
frontend/templates/: homepage.hamlet
frontend/test/: Spec.hs
frontend/test/Handler/: HomeSpec.hs
frontend2/: tasknight-frontend.cabal
frontend2/config/: keter.yml  settings.yml  test-settings.yml
frontend2/test/Handler/: CommentSpec.hs
src/Data/Text/: Extra.hs
src/Tasknight/: Cache.hs  Dashboard.hs  OAuth2.hs  Provider.hs  Storage.hs
src/Tasknight/Cache/: Local.hs
src/Tasknight/Dashboard/: Config.hs
src/Tasknight/Providers/: Feedly.hs  Gmail.hs  Twitter.hs
src/Tasknight/Storage/: Local.hs
src/Tasknight/Util/: Email.hs  IMAP.hs
tasknight-dashboard/src/Tasknight/Providers/: Feedly.hs  Gmail.hs
tasknight-dashboard/src/Tasknight/Storage/: Local.hs
trello-api/: .gitignore  package.yaml
trello-api/lib/Trello/: API.hs
trello-api/lib/Trello/API/: Types.hs
trello-api/lib/Web/Trello/: API.hs
trello-api/lib/Web/Trello/API/: Types.hs
trello-client/: .gitignore  package.yaml
trello-client/lib/Trello/: Client.hs
trello-client/lib/Trello/Client/: BaseUrl.hs  Internal.hs
trello-client/lib/Web/Trello/: Client.hs
trello-client/lib/Web/Trello/Client/: BaseUrl.hs  Internal.hs
