name:               tasknight-dashboard
version:            0.0.0.0
synopsis:           A web dashboard of tasks to do.
description:        A web dashboard of tasks to do.
homepage:           http://github.com/cblp/tasknight-dashboard#readme
license:            GPL-3
license-file:       LICENSE
author:             Yuriy Syrovetskiy
maintainer:         cblp@cblp.su
copyright:          2016 Yuriy Syrovetskiy
category:           Productivity, Web
build-type:         Simple
-- extra-source-files:
cabal-version:      >= 1.10

library
    hs-source-dirs:   src
    exposed-modules:  Tasknight.Storage
                      Tasknight.Storage.Local
                      Tasknight.Dashboard
                      Tasknight.Dashboard.Config
                      Tasknight.OAuth2
                      Tasknight.Provider
                      Tasknight.Providers.Feedly
                      Tasknight.Providers.Gmail
                      Tasknight.Providers.Twitter
    other-modules:    Data.Text.Extra
                      Tasknight.Util.Email
                      Tasknight.Util.IMAP
    build-depends:    attoparsec
                    , base < 5
                    , base64-bytestring
                    , bytestring
                    , connection
                    , directory
                    , email-header
                    , errors
                    , filepath
                    , google-oauth2
                    , hsemail
                    , imap
                    , list-t
                    , mtl
                    , parsec
                    , pretty-show
                    , text
                    , transformers
                    , xdg-basedir
                      -- ^ TODO(cblp, 2016-04-03) replace with System.Directory.getXdgDirectory
                    , yaml
    default-language: Haskell2010
    ghc-options:      -Wall

executable tasknight-dashboard
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    base
                    , tasknight-dashboard
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall

test-suite tasknight-dashboard-test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base
                    , tasknight-dashboard
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -Werror

source-repository head
    type:     git
    location: https://github.com/cblp/tasknight-dashboard
