name:           tasknight-frontend
version:        0.1.0.0
license:        BSD3
license-file:   LICENSE
author:         Yuriy Syrovetskiy
maintainer:     cblp@cblp.su
category:       Web
build-type:     Simple
cabal-version:  >= 1.10

library
    hs-source-dirs:   src
    exposed-modules:  Tasknight.Frontend
    other-modules:    Tasknight.Frontend.Auth
                      Tasknight.Frontend.Dashboard
                      Tasknight.Frontend.Root
                      Tasknight.Frontend.Types
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base
                    , servant >= 0.6.1
                      -- ^ in 0.6.1 they fixed BasicAuth
                    , servant-blaze
                    , servant-server
                    , wai

executable tasknight-frontend
    hs-source-dirs:   app
    main-is:          Main.hs
    default-language: Haskell2010
    ghc-options:      -Wall

    build-depends:    base
                    , warp

                    , tasknight-frontend

test-suite test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    default-language: Haskell2010
    ghc-options:      -Wall

    build-depends:    base
                    , wai-extra
                    , tasty
                    , tasty-hunit

                    , tasknight-frontend
