name:              tasknight-frontend
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs:   ., app
    exposed-modules:  Application
                      Foundation
                      Handler.Common
                      Handler.Home
                      Import
                      Import.NoFoundation
                      Model
                      Settings
                      Settings.StaticFiles

    ghc-options:      -Wall -Werror -fwarn-tabs
    if flag(dev) || flag(library-only)
        cpp-options:  -DDEVELOPMENT
        ghc-options:  -O0
    else
        ghc-options:  -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends:  aeson                   >= 0.6      && < 0.12
                  , base                    >= 4        && < 5
                  , blaze-html
                  , bytestring              >= 0.9      && < 0.11
                  , case-insensitive
                  , classy-prelude          >= 0.10.2
                  , classy-prelude-conduit  >= 0.10.2
                  , classy-prelude-yesod    >= 0.10.2
                  , conduit                 >= 1.0      && < 2.0
                  , containers
                  , data-default
                  , directory               >= 1.1      && < 1.3
                  , fast-logger             >= 2.2      && < 2.5
                  , file-embed
                  , hjsmin                  >= 0.1      && < 0.3
                  , http-conduit            >= 2.1      && < 2.2
                  , mime-mail
                  , monad-control           >= 0.3      && < 1.1
                  , monad-logger            >= 0.3      && < 0.4
                  , persistent              >= 2.0      && < 2.6
                  , persistent-postgresql   >= 2.1.1    && < 2.6
                  , persistent-template     >= 2.0      && < 2.6
                  , safe
                  , shakespeare             >= 2.0      && < 2.1
                  , template-haskell
                  , text                    >= 0.11     && < 2.0
                  , time
                  , unordered-containers
                  , vector
                  , wai
                  , wai-extra               >= 3.0      && < 3.1
                  , wai-logger              >= 2.2      && < 2.3
                  , warp                    >= 3.0      && < 3.3
                  , yaml                    >= 0.8      && < 0.9
                  , yesod                   >= 1.4.3    && < 1.5
                  , yesod-auth              >= 1.4.0    && < 1.5
                  , yesod-core              >= 1.4.17   && < 1.5
                  , yesod-form              >= 1.4.0    && < 1.5
                  , yesod-static            >= 1.4.0.3  && < 1.6

executable tasknight-frontend
    if flag(library-only)
        Buildable: False

    main-is:          main.hs
    hs-source-dirs:   app
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

    build-depends:    base

                    , tasknight-frontend

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    other-modules:     Handler.CommonSpec
                       Handler.HomeSpec
                       TestImport
    hs-source-dirs:    test
    ghc-options:       -Wall -Werror

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , yesod-test >= 1.5.0.1 && < 1.6
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
                 , aeson

                 , tasknight-frontend
